@@ -1,15 +1,13 @@
 package vn.edu.fpt.fashionstore.controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import vn.edu.fpt.fashionstore.entity.Category;
 import vn.edu.fpt.fashionstore.entity.Product;
 import vn.edu.fpt.fashionstore.service.ProductService;
 
@@ -22,6 +20,9 @@ public class ProductController {
     @Autowired
     private ProductService productService;
 
+    // =========================
+    // LIST PRODUCT
+    // =========================
     @GetMapping
     public String showProducts(
             @RequestParam(required = false) String keyword,
@@ -35,88 +36,101 @@ public class ProductController {
             @RequestParam(defaultValue = "asc") String direction,
             Model model) {
 
-        // Tạo Pageable với phân trang và sắp xếp
-        Sort.Direction sortDirection = direction.equalsIgnoreCase("desc") ? 
-            Sort.Direction.DESC : Sort.Direction.ASC;
+        // Sort
+        Sort.Direction sortDirection =
+                direction.equalsIgnoreCase("desc")
+                        ? Sort.Direction.DESC
+                        : Sort.Direction.ASC;
+
         Pageable pageable = PageRequest.of(page, pageSize, Sort.by(sortDirection, sort));
 
         Page<Product> productPage;
 
-        // Nếu có từ khóa tìm kiếm hoặc bộ lọc, sử dụng searchAndFilterProducts
-        if (hasSearchOrFilter(keyword, categoryId, size, minPrice, maxPrice)) {
+        // Có filter/search thì gọi search
+        if (hasFilter(keyword, categoryId, size, minPrice, maxPrice)) {
             productPage = productService.searchAndFilterProducts(
-                keyword, categoryId, size, minPrice, maxPrice, pageable);
+                    keyword, categoryId, size, minPrice, maxPrice, pageable
+            );
         } else {
             productPage = productService.getAllProducts(pageable);
         }
 
-        if (page > 0 && productPage.getNumberOfElements() == 0 && productPage.getTotalElements() > 0) {
-            page = 0;
-            pageable = PageRequest.of(page, pageSize, Sort.by(sortDirection, sort));
-            if (hasSearchOrFilter(keyword, categoryId, size, minPrice, maxPrice)) {
+        // Nếu page vượt quá total page → quay về page 0
+        if (page > 0 && productPage.isEmpty() && productPage.getTotalElements() > 0) {
+            pageable = PageRequest.of(0, pageSize, Sort.by(sortDirection, sort));
+            if (hasFilter(keyword, categoryId, size, minPrice, maxPrice)) {
                 productPage = productService.searchAndFilterProducts(
-                    keyword, categoryId, size, minPrice, maxPrice, pageable);
+                        keyword, categoryId, size, minPrice, maxPrice, pageable
+                );
             } else {
                 productPage = productService.getAllProducts(pageable);
             }
         }
 
-        System.out.println("/products loaded elements=" + productPage.getNumberOfElements() + ", total=" + productPage.getTotalElements() + ", page=" + page);
-
-        // Lấy danh sách danh mục cho bộ lọc
-        List<Long> categoryIds = productService.getAllCategoryIds();
-
-        // Thêm dữ liệu vào model
+        // =========================
+        // DATA CHO VIEW
+        // =========================
         model.addAttribute("products", productPage.getContent());
-        model.addAttribute("currentPage", page);
+        model.addAttribute("currentPage", productPage.getNumber());
         model.addAttribute("totalPages", productPage.getTotalPages());
         model.addAttribute("totalItems", productPage.getTotalElements());
         model.addAttribute("pageSize", pageSize);
+
         model.addAttribute("sort", sort);
         model.addAttribute("direction", direction);
 
-        // Thêm các tham số tìm kiếm và lọc vào model
+        // giữ filter
         model.addAttribute("keyword", keyword);
         model.addAttribute("selectedCategoryId", categoryId);
         model.addAttribute("selectedSize", size);
         model.addAttribute("minPrice", minPrice);
         model.addAttribute("maxPrice", maxPrice);
 
-        // Thêm danh sách cho bộ lọc
+        // category cho filter
+        List<Category> categoryIds = productService.getAllCategoryIds();
         model.addAttribute("categoryIds", categoryIds);
 
-        // Thêm thông tin hiển thị
-        long totalElements = productPage.getTotalElements();
-        int numberOfElements = productPage.getNumberOfElements();
-        int startItem = 0;
-        int endItem = 0;
-        if (totalElements > 0 && numberOfElements > 0) {
-            startItem = page * pageSize + 1;
-            endItem = startItem + numberOfElements - 1;
-        }
-        model.addAttribute("startItem", startItem);
-        model.addAttribute("endItem", endItem);
+        // Hiển thị "Showing x – y of z"
+        long total = productPage.getTotalElements();
+        int start = total == 0 ? 0 : productPage.getNumber() * pageSize + 1;
+        int end = Math.min(start + productPage.getNumberOfElements() - 1, (int) total);
+
+        model.addAttribute("startItem", start);
+        model.addAttribute("endItem", end);
 
         return "list";
     }
 
-    @GetMapping("/product-details")
-    public String productDetails(@RequestParam("id") Long productId, Model model) {
+    // =========================
+    // PRODUCT DETAILS
+    // =========================
+    @GetMapping("/detail")
+    public String productDetails(
+            @RequestParam("id") Long productId,
+            Model model) {
+
         Product product = productService.getProductById(productId);
-        if (product != null) {
-            model.addAttribute("product", product);
-            return "productdetails";
-        } else {
+
+        if (product == null) {
             return "redirect:/products";
         }
+
+        model.addAttribute("product", product);
+        model.addAttribute("variants", product.getVariants());
+
+        return "productdetails";
     }
 
-    // Kiểm tra xem có tham số tìm kiếm hoặc lọc nào không
-    private boolean hasSearchOrFilter(String keyword, Long categoryId, String size, Double minPrice, Double maxPrice) {
-        return (keyword != null && !keyword.trim().isEmpty()) ||
-               categoryId != null || 
-               (size != null && !size.trim().isEmpty()) ||
-               minPrice != null || 
-               maxPrice != null;
+    // =========================
+    // CHECK FILTER
+    // =========================
+    private boolean hasFilter(String keyword, Long categoryId, String size,
+                              Double minPrice, Double maxPrice) {
+
+        return (keyword != null && !keyword.isBlank())
+                || categoryId != null
+                || (size != null && !size.isBlank())
+                || minPrice != null
+                || maxPrice != null;
     }
 }
